# cdp-generation

./: .env.example  .gitignore  CLAUDE.md  Project_IDEA.md  README.md  conftest.py  idea.md  packages.txt  pyproject.toml  requirements.txt
.claude/agents/: architect.md  data-scout.md  db-architect.md  deploy-engineer.md  doc-keeper.md  prompt-engineer.md  reviewer.md  scenario-author.md  visual-designer.md
.streamlit/: config.toml  secrets.toml.example
docs/: RESUME.md  api_contracts.md  architecture.md  auth_telegram.md  data_model.md  deploy.md  rules.md  spec.md  stack.md  visual_identity.md
knowledge_base/: README.md
knowledge_base/data/: CLAUDE.md
knowledge_base/data/01_product/: 01_overview.md  02_architecture.md  03_pricing.md  04_implementation.md  05_technical_nuances.md  06_glossary.md
knowledge_base/data/02_sales/: 01_value_proposition.md  02_objections.md  03_competitors.md  04_discovery_questions.md  05_cdp_vs_tilda.md  06_positioning_webinar.md  07_webinar_august_2025.md  (+1 more)
promo/widgets_auto/: index.html
prompts/: cold_intro.md  data_scout_extract.md  doc_keeper_brief.md  scenario_author.md
src/: __init__.py  app.py  config.py  exceptions.py  llm.py  models.py  orchestrator.py  prompts.py
src/agents/: __init__.py  data_scout.py  doc_keeper.py  intro_writer.py  pdf_renderer.py  reviewer.py  scenario_author.py  visual_designer.py
templates/: proposal.html.j2
tests/: test_imports.py  test_intro_models.py  test_llm_strip_fence.py  test_models.py  test_prompt_format.py  test_reviewer.py  test_template.py
(+15 files in other folders)
